z-index spider-web fix

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
 }
 
 .spider-net{
-    z-index: 100;
+    z-index: 250;
 }
 
 .flower-next{
